@@ -1,3 +1,7 @@
+2001-09-05  Sam Steingold  <sds@gnu.org>
+
+	* install.lisp (add-fas-file, add-mem-file): set the default action
+
 2001-08-30  Sam Steingold  <sds@gnu.org>
 
 	* lispbibl.d (nonreturning_function): [MICROSOFT] __declspec(noreturn)
